--- a/.github/workflows/sync-develop.yaml
+++ b/.github/workflows/sync-develop.yaml
@@ -24,6 +24,8 @@ jobs:
           git config --global user.email "github-actions@github.com"
 
       - name: Create Pull Request
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get the latest commit message and hash
           COMMIT_HASH=$(git rev-parse HEAD)
