chore: add permission

--- a/.github/workflows/sync-develop.yaml
+++ b/.github/workflows/sync-develop.yaml
@@ -10,6 +10,9 @@ jobs:
     name: Create PR from main to develop
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    permissions:
+      contents: write
+      pull-requests: write
     
     steps:
       - name: Checkout 🛎️
