--- a/.github/workflows/sync-develop.yaml
+++ b/.github/workflows/sync-develop.yaml
@@ -1,17 +1,18 @@
-name: Create PR from main to develop
+
+name: Sync develop with main
 
 on:
-  push:
+  pull_request:
+    types:
+      - closed
     branches:
       - main
-
-permissions:
-  contents: write
-  pull-requests: write
+ # Enable "Run Workflow" button to trigger the workflow manually
+  workflow_dispatch:
 
 jobs:
   sync-develop:
-    name: Create PR from main to develop
+    name: Sync develop branch with main
     runs-on: ubuntu-latest
     timeout-minutes: 5
     
@@ -20,20 +21,33 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: main
-
-      - name: Setup git
+          ref: develop
+      
+      - name: Configure Git
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
+          git config user.name "GitHub Actions Bot"
+          git config user.email "github-actions-bot@users.noreply.github.com"
+      
+      - name: Fetch latest from remote
+        run: |
+          git fetch --prune
+      
+      - name: Merge main into develop
+        run: |
+          # Check if main has any changes compared to develop
+          if git merge-base --is-ancestor origin/main origin/develop; then
+            echo "[SKIPPED] develop is already up to date with main."
+            exit 0
+          fi
+          
+          # Try to merge main into develop
       - name: Create Pull Request
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get the latest commit message and hash
           COMMIT_HASH=$(git rev-parse HEAD)
-          COMMIT_MSG=$(git log -1 --pretty=%B)
+          COMMIT_MSG=$(git log -1 --pretty=%%B)
           
           # Create a new branch from main
           SYNC_BRANCH="sync/main-to-develop-${COMMIT_HASH:0:7}"
@@ -43,11 +57,8 @@ jobs:
           gh pr create \
             --base develop \
             --head $SYNC_BRANCH \
-            --title "chore: sync develop with main (${COMMIT_HASH:0:7})" \
+            --title "chore: sync main with develop (${COMMIT_HASH:0:7})" \
             --body "This PR was automatically created to sync changes from main into develop.
 
             **Changes included:**
             ${COMMIT_MSG}
-            
-            This PR was triggered by commit: ${COMMIT_HASH}" \
-            --label "automated-sync"
