--- a/.github/workflows/sync-develop.yaml
+++ b/.github/workflows/sync-develop.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   sync-develop:
-    name: Sync develop branch with main
+    name: Create PR from main into develop
     runs-on: ubuntu-latest
     timeout-minutes: 5
     
