--- a/.github/workflows/sync-develop.yaml
+++ b/.github/workflows/sync-develop.yaml
@@ -56,7 +56,7 @@ jobs:
           gh pr create \
             --base develop \
             --head $SYNC_BRANCH \
-            --title "chore: sync main with develop (${COMMIT_HASH:0:7})" \
+            --title "chore: sync main into develop (${COMMIT_HASH:0:7})" \
             --body "This PR was automatically created to sync changes from main into develop.
 
             **Changes included:**
