--- a/.github/workflows/sync-develop.yaml
+++ b/.github/workflows/sync-develop.yaml
@@ -20,14 +20,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: main
-
+          
       - name: Setup git
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+      - name: Fetch all branches
+        run: |
+          git fetch origin develop:develop || git branch develop
 
-      - name: Create Pull Request
+      - name: Create Pull Request if there are changes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -35,11 +38,17 @@ jobs:
           COMMIT_HASH=$(git rev-parse HEAD)
           COMMIT_MSG=$(git log -1 --pretty=%B)
           
+          # Check if there are any differences between main and develop
+          if git diff --quiet main develop; then
+            echo "No changes to sync - develop is already up to date with main"
+            exit 0
+          fi
+          
           # Create a new branch from main
           SYNC_BRANCH="sync/main-to-develop-${COMMIT_HASH:0:7}"
           git checkout -b $SYNC_BRANCH
           
-          # Create PR using gh cli
+          # Try to create PR
           gh pr create \
             --base develop \
             --head $SYNC_BRANCH \
@@ -50,4 +59,4 @@ jobs:
             ${COMMIT_MSG}
             
             This PR was triggered by commit: ${COMMIT_HASH}" \
-            --label "automated-sync"
+            --label "automated-sync" || echo "PR creation failed, likely because PR already exists"
