--- a/.github/workflows/sync-develop.yaml
+++ b/.github/workflows/sync-develop.yaml
@@ -42,7 +42,7 @@ jobs:
           git checkout main && git pull origin main
           git checkout -b $SYNC_BRANCH
           git push origin $SYNC_BRANCH
-          git checkout develop && git pull origin develop
+          git checkout develop && git pull origin develop && git push origin develop
           
           # Try to create PR
           gh pr create \
