--- a/.github/workflows/sync-develop.yaml
+++ b/.github/workflows/sync-develop.yaml
@@ -27,31 +27,33 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Get the latest commit message and hash
-          COMMIT_HASH=$(git rev-parse HEAD)
-          COMMIT_MSG=$(git log -1 --pretty=%B)
-          
-          # Check if there are any differences between main and develop
-          if git diff --quiet main develop; then
-            echo "[SKIPPED]No changes to sync - develop is already up to date with main"
-            exit 0
-          fi
-
           # Fetch the latest main and develop
           git fetch origin develop
           git fetch origin main
+
+          # Get the latest commit message and hash
+          git checkout main
+          COMMIT_HASH=$(git rev-parse HEAD)
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+
+          # Check if there are any differences between main and develop
+          if git diff --quiet main develop; then
+            echo "[SKIPPED] No changes to sync - develop is already up to date with main"
+            exit 0
+          fi
           
           # Create a new branch from main
+          
           SYNC_BRANCH="sync/main-to-develop-${COMMIT_HASH:0:7}"
           git checkout -b $SYNC_BRANCH
           git push origin $SYNC_BRANCH
           
-          # Try to create PR
+          # Create PR from main into develop
           gh pr create \
             --base develop \
             --head $SYNC_BRANCH \
             --title "chore: sync main into develop (${COMMIT_HASH:0:7})" \
-            --body "This PR was automatically created to sync changes from main into develop.
+            --body "This PR is automatically created to sync changes from main into develop.
 
             **Changes included:**
             ${COMMIT_MSG}
